[package]
name = "bytesequences"
version = "0.1.0"
edition = "2021"
author = "bergabman"

[dependencies]
anyhow = "1.0.79"
serde_json = "1.0"
rayon = "1.8"
kmp = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.31"
base64 = "0.21.5"
serde = "1.0.195"
serde_derive = "1.0.195"
boyer-moore-magiclen = "0.2.20"
num-format = "0.4.4"

[profile.release]
opt-level = 3
strip = "debuginfo"
