[package]
name = "wba-solana-prereqs"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bs58 = "0.5.0"
borsh = { version = "1.2.0", features = ["derive"] }
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"
solana-idlgen = { git = "https://github.com/bergabman/solana-idlgen.git" }