[package]
name = "dev-capital"
version = "0.1.0"
description = "Dev Capital"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dev_capital"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
ahash = "=0.8.6"
