[package]
name = "dev-capital"
version = "0.1.0"
description = "Dev Capital"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dev_capital"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
ahash = "=0.8.6"
arrayref = "0.3.7"
amplify_num = "0.5.1"
